# myheartcounts-dataset

./: .gitattributes  .gitignore  CLAUDE.md  DATASET.md  README.md  constraints.txt  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: submission.yml
configs/downstream/: eval.yaml
configs/downstream/data/: default.yaml
configs/downstream/evaluation/: default.yaml
configs/downstream/method/: chronos2.yaml  gru_d.yaml  lsm2.yaml  mae.yaml  multirocket.yaml  toto.yaml  wbm.yaml  xgboost.yaml
configs/downstream/output/: default.yaml
configs/forecasting/: eval.yaml
configs/forecasting/data/: default.yaml
configs/forecasting/evaluator/: default.yaml
configs/forecasting/forecasting/: default.yaml
configs/forecasting/metrics/: default.yaml
configs/forecasting/model/: autoARIMA.yaml  autoETS.yaml  chronos2.yaml  dlinear.yaml  mixlinear.yaml  seasonal_naive.yaml  seasonal_naive_average_history.yaml  segrnn.yaml  toto.yaml
configs/forecasting/output/: default.yaml
configs/forecasting_train/: train.yaml
configs/forecasting_train/data/: default.yaml
configs/forecasting_train/features/: default.yaml
configs/forecasting_train/model/: dlinear.yaml  mixlinear.yaml  segrnn.yaml
configs/forecasting_train/output/: default.yaml
configs/forecasting_train/training/: default.yaml
configs/imputation/: eval.yaml
configs/paper/: downstream_paper.yaml  sweep_forecasting.yaml  sweep_forecasting_models.yaml  sweep_methods.yaml
configs/training/: train.yaml
data/baselines/: imputation_locf.json
data/labels/: label_types.json  ordinal_dictionary.json  task_feature_exclusions.json  user_device_info_sample.json  validity_config.json
data/splits/: sharable_users_seed42_2026.json  sharable_users_seed42_2026_xs.json
docs/: install.md  leaderboard-maintenance.md  manual-dataset-setup.md  neural-forecasters.md  neural-imputers.md
jobs/sherlock/: _env.sh
notebooks/: example_lsm2_representation_extraction.ipynb  quickstart.ipynb  quickstart_benchmark.ipynb
scripts/: precompute_xs_masks.py  run_eval.py  validate_grud_determinism.py  validate_mae_loader_migration.py  validate_tsfm_loader_migration.py  validate_wbm_loader_migration.py  validate_xgboost_loader_migration.py
scripts/dev/: _fedformer_vram_probe.py  activate-openmhc.sh  compare_dlinear_imputation.py  compare_mean_imputation.py  compare_mean_imputation_full.py
scripts/downstream_paper_results/: aggregate_downstream_paper_metrics.py  aggregate_fairness_skill_score.py  bootstrap_downstream_draws.py  build_leaderboard_json.py  run_paper_pipeline.py
scripts/paper_results/: README.md  aggregate_fairness_skill_score.py  aggregate_imputation_paper_metrics.py  bootstrap_downstream_draws.py  bootstrap_imputation_draws.py  build_leaderboard_json.py  compute_imputation_paper_metrics.py  constraints.txt  run_paper_pipeline.py
src/context/: README.md  __init__.py  api.py  test_api.py
src/data/: __init__.py  normalization.py
src/devices/: README.md  __init__.py  api.py  test_api.py
src/downstream_evaluation/: README.md  __init__.py  config.py  demo_covariates.py  feature_store.py  runner.py
src/eval_hydra/: __init__.py  artifacts.py  registry.py  store.py  wandb_shim.py
src/forecasting_evaluation/: CODEREVIEW.md  INTERNALS.md  METRICS.md  README.md  __init__.py  config.py  runner.py
src/forecasting_training/: __init__.py  config.py  model_registry.py  release.py  runner.py  seeding.py
src/imputation_evaluation/: METRICS.md  README.md  __init__.py  config.py  requirements.lock.txt  runner.py  sensitivity.py
src/imputation_training/: README.md  __init__.py  config.py  data_export.py  model_registry.py  normalization.py  release.py  runner.py  seeding.py
src/labels/: README.md  __init__.py  api.py  test_api.py
src/openmhc/: __init__.py  _constants.py  _data_spec.py  _data_utils.py  _dataset.py  _device.py  _evaluate.py  _probe.py  _protocols.py  _results.py  _seeding.py  _submission.py  probe.py
src/utils/: __init__.py  checkpoints.py  hf_cache.py
tests/: test_binary_error_floor.py  test_binary_offline_pooled_micro.py  test_build_leaderboard_json.py  test_build_manifest.py  test_data_spec.py  test_device_resolution.py  test_downstream_fallback.py  test_downstream_seed.py  test_downstream_substrate.py  test_encoder_release.py  test_fairness_bca.py  test_forecasting_bca.py  test_forecasting_bootstrap_skill_rank.py  test_forecasting_contract.py  test_forecasting_fair_skill_score_bootstrap.py  test_forecasting_fallback.py  test_forecasting_mapd.py  test_forecasting_per_user_metrics.py  test_forecasting_release.py  test_forecasting_within_user_aggregation.py  test_imputation_api.py  test_imputation_skill_by_scenario_table.py  test_lsm2_imputers.py  test_method_contract.py  test_metric_spec.py  test_metrics_config.py  test_offline_config_io.py  test_optional_fit.py  test_paths.py  test_personalized_loo.py  test_public_encoder_path.py  test_public_method_path.py  test_pypots_imputers.py  test_release.py  test_release_hf.py  test_run_paper_pipeline.py  test_task_display_names.py  test_upload_leaderboard_fallback.py  test_window_specs.py
tests/forecasting_training/: test_forecasting_release_bundle.py  test_forecasting_train_config.py  test_model_registry.py  test_short_history.py
tests/imputation_evaluation/: conftest.py  test_average_rankings_per_user.py  test_bootstrap.py  test_bootstrap_skill_rank.py  test_category_collapse_skill.py  test_disparity_sign.py  test_fairness_b2.py  test_imputation_bca.py  test_paper_metrics_core.py  test_skill_score_parity.py  test_user_grouped_sampler.py  test_user_macro_metrics.py
tests/imputation_training/: test_config.py  test_release_bundle.py  test_seeding.py
tools/: build_manifest.py  publish_to_hf.py  upload_leaderboard_bootstrap.py  upload_leaderboard_substrate.py
tools/build-xs/: README.md  RUNBOOK.md  SPEC.md
tools/encoders/: build_wbm_release.py
tools/forecasting/: build_forecasting_release.py  merge_chronos_lora.py  regen_neural_scaler.py  verify_bundles.py
tools/leaderboard_docs/: README.md  SCHEMA.md
(+660 files in other folders)
