[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmhc"
version = "0.1.0"
description = "OpenMHC: evaluation API for the MyHeartCounts wearable benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MyHeartCounts Datasets & Benchmarks team" },
]
dependencies = [
  "datasets",
  "h5py",
  "joblib",
  "matplotlib",
  "mord",
  "numpy",
  "pandas",
  "polars",
  "pyarrow",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "torch",
  "tqdm",
  "xgboost",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipywidgets",
  "pytest",
  "ruff",
]
pypots = [
  # >=1.2 required for the forecasting MixLinear model (added in 1.2); also
  # ships the imputation models (BRITS/TimesNet/DLinear/FEDformer).
  "pypots>=1.2",
]
lsm2 = [
  "pytorch-lightning>=2.0",
]
chronos = [
  # Chronos-2 forecaster wrapper. Chronos2Pipeline ships in the 2.x line;
  # the PyPI distribution is `chronos-forecasting` (imported as `chronos`).
  "chronos-forecasting>=2.0",
]
toto = [
  # Toto forecaster wrapper (imported as `toto`).
  "toto-ts>=0.2",
]
hf = [
  "huggingface_hub>=0.20",
]
hydra = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "hydra-submitit-launcher>=1.2",
]
wandb = [
  "wandb>=0.16",
]
# Every runtime feature in one shot (all tracks + Hydra CLIs + W&B logging).
# Add ``dev`` for contributor tooling: ``pip install -e ".[all,dev]"``.
all = [
  "openmhc[pypots,lsm2,chronos,toto,hf,hydra,wandb]",
]

[project.scripts]
mhc-impute-eval = "imputation_evaluation.hydra.cli:main"
mhc-impute-train = "imputation_training.hydra.cli:main"
mhc-forecast-eval = "forecasting_evaluation.hydra.cli:main"
mhc-forecast-train = "forecasting_training.hydra.cli:main"
# Downstream (health-prediction) Hydra CLI — the prediction-track twin of
# mhc-impute-eval / mhc-forecast-eval. Requires the [hydra] extra.
mhc-downstream-eval = "downstream_evaluation.hydra.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"eval_hydra" = ["configs/**/*.yaml"]
"openmhc" = ["data/baselines/*.parquet"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "context*",
  "data*",
  "devices*",
  "downstream_evaluation*",
  "eval_hydra*",
  "imputation_evaluation*",
  "imputation_training*",
  "forecasting_evaluation*",
  "forecasting_training*",
  "eval_hydra*",
  "labels*",
  "openmhc*",
  "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
