[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmhc"
version = "0.1.0"
description = "OpenMHC: evaluation API for the MyHeartCounts wearable benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MyHeartCounts Datasets & Benchmarks team" },
]
dependencies = [
  "datasets",
  "h5py",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "polars",
  "pyarrow",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "torch",
  "tqdm",
  "xgboost",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipywidgets",
  "pytest",
  "ruff",
]
pypots = [
  # >=1.2 required for the forecasting MixLinear model (added in 1.2); also
  # ships the imputation models (BRITS/TimesNet/DLinear/FEDformer).
  "pypots>=1.2",
]
lsm2 = [
  "pytorch-lightning>=2.0",
  # The published LSM2 checkpoint stores its hyperparameters through Lightning's
  # CLI machinery, so rebuilding the module in ``load_from_checkpoint`` needs
  # jsonargparse to deserialize them. Without it Lightning silently stubs out its
  # argument parser and the load fails with ``object() takes no arguments``.
  "jsonargparse[signatures]>=4.27",
]
chronos = [
  # Chronos-2 forecaster wrapper. Chronos2Pipeline ships in the 2.x line;
  # the PyPI distribution is `chronos-forecasting` (imported as `chronos`).
  "chronos-forecasting>=2.0",
]
toto_dep = [
  # toto's RUNTIME deps ONLY — NOT toto-ts itself. toto-ts 0.2.0 over-pins its
  # transitive deps (torch==2.7.0, numpy==1.26.4, datasets==2.17.1, gluonts, ...),
  # which conflict with the rest of openmhc, so toto-ts must be installed separately
  # without its deps:
  #     pip install --no-deps toto-ts==0.2.0
  # then `pip install -e ".[toto_dep]"` supplies the deps its model forward needs.
  "jaxtyping==0.2.29",
  "rotary-embedding-torch==0.8.6",
  # gluonts is imported by toto/model/distribution.py (the forecasting head); our
  # last-latent extraction bypasses it, so its version is not result-affecting — but it
  # IS dependency-affecting: left unpinned, the resolver backtracks to gluonts 0.13.x,
  # which hard-pins pydantic 1.x / protobuf 3.x and breaks wandb. Pin the modern gluonts
  # (the version toto-ts targets) so pydantic/protobuf stay wandb-compatible (2.x / 4.x).
  "gluonts[torch]==0.16.2",
]
toto = [
  # Toto forecaster wrapper (imported as `toto`).
  "toto-ts>=0.2",
]
hf = [
  "huggingface_hub>=0.20",
]
hydra = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "hydra-submitit-launcher>=1.2",
]
wandb = [
  "wandb>=0.16",
]
downstream = [
  # Prediction-track CPU feature extractors: MultiRocket (sktime -> numba) and
  # the xgboost curve-analysis FPCA (scikit-fda). For reproducible numerics, install with the
  # version freeze (constraints.txt also pins the GPU stack, so it needs the cu126 torch index):
  # ``pip install -e ".[downstream]" -c constraints.txt --extra-index-url https://download.pytorch.org/whl/cu126``.
  "scikit-fda",
  "sktime",
  "numba",
]
# Every runtime feature in one shot (all tracks + Hydra CLIs + W&B logging).
# Add ``dev`` for contributor tooling: ``pip install -e ".[all,dev]"``.
all = [
  "openmhc[pypots,lsm2,chronos,hf,hydra,wandb,downstream]",
]

[project.scripts]
mhc-impute-eval = "imputation_evaluation.hydra.cli:main"
mhc-impute-train = "imputation_training.hydra.cli:main"
mhc-forecast-eval = "forecasting_evaluation.hydra.cli:main"
mhc-forecast-train = "forecasting_training.hydra.cli:main"
# Downstream (health-prediction) Hydra CLI — the prediction-track twin of
# mhc-impute-eval / mhc-forecast-eval. Requires the [hydra] extra.
mhc-downstream-eval = "downstream_evaluation.hydra.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"eval_hydra" = ["configs/**/*.yaml"]
"openmhc" = ["data/baselines/*.parquet"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "context*",
  "data*",
  "devices*",
  "downstream_evaluation*",
  "eval_hydra*",
  "imputation_evaluation*",
  "imputation_training*",
  "forecasting_evaluation*",
  "forecasting_training*",
  "eval_hydra*",
  "labels*",
  "openmhc*",
  "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
