[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmhc"
version = "0.1.0"
description = "OpenMHC: evaluation API for the MyHeartCounts wearable benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MyHeartCounts Datasets & Benchmarks team" },
]
# Lower bounds keep pip's resolver from backtracking into ancient releases
# (an unbounded graph here triggers `resolution-too-deep`). Floors are set at or
# below the versions the optional `toto` stack pins (numpy 1.26 / datasets 2.17),
# so the standalone `[toto]` extra still resolves in its own environment.
dependencies = [
  "datasets>=2.17",
  "h5py>=3.10",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "mord>=0.7",  # 0.7 is the first release whose sdist builds under PEP 517 isolation
  "numpy>=1.26",
  "pandas>=2.1",
  "polars>=1.0",
  "pyarrow>=14",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "torch>=2.2",
  "tqdm>=4.66",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipywidgets",
  "pytest",
  "ruff",
]
pypots = [
  # >=1.2 required for the forecasting MixLinear model (added in 1.2); also
  # ships the imputation models (BRITS/TimesNet/DLinear/FEDformer).
  "pypots>=1.2",
]
lsm2 = [
  "pytorch-lightning>=2.0",
]
chronos = [
  # Chronos-2 forecaster wrapper. Chronos2Pipeline ships in the 2.x line;
  # the PyPI distribution is `chronos-forecasting` (imported as `chronos`).
  "chronos-forecasting>=2.0",
]
toto = [
  # Toto forecaster wrapper (imported as `toto`). NOTE: toto-ts==0.2.0 hard-pins
  # an old scientific stack (numpy==1.26.4, datasets==2.17.1, ...) that is
  # incompatible with the modern versions the rest of `[all]` uses, so `toto` is
  # intentionally NOT part of `[all]`. Install it in its own environment:
  #   conda create -n openmhc-toto python=3.10 && conda activate openmhc-toto
  #   pip install -e ".[toto]"
  "toto-ts>=0.2",
]
hf = [
  "huggingface_hub>=0.20",
]
hydra = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "hydra-submitit-launcher>=1.2",
]
wandb = [
  "wandb>=0.16",
]
# Every runtime feature in one shot (all tracks + Hydra CLIs + W&B logging).
# Add ``dev`` for contributor tooling: ``pip install -e ".[all,dev]"``.
# ``toto`` is deliberately excluded — it pins an old, incompatible stack and must
# go in its own environment (see the ``toto`` extra above).
all = [
  "openmhc[pypots,lsm2,chronos,hf,hydra,wandb]",
]

[project.scripts]
mhc-impute-eval = "imputation_evaluation.hydra.cli:main"
mhc-impute-train = "imputation_training.hydra.cli:main"
mhc-forecast-eval = "forecasting_evaluation.hydra.cli:main"
mhc-forecast-train = "forecasting_training.hydra.cli:main"
# Downstream (health-prediction) Hydra CLI — the prediction-track twin of
# mhc-impute-eval / mhc-forecast-eval. Requires the [hydra] extra.
mhc-downstream-eval = "downstream_evaluation.hydra.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"eval_hydra" = ["configs/**/*.yaml"]
"openmhc" = ["data/baselines/*.parquet"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "context*",
  "data*",
  "devices*",
  "downstream_evaluation*",
  "eval_hydra*",
  "imputation_evaluation*",
  "imputation_training*",
  "forecasting_evaluation*",
  "forecasting_training*",
  "eval_hydra*",
  "labels*",
  "openmhc*",
  "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
